--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.2",
     "d3": "^7.9.0",
     "d3-scale": "^4.0.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
