--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-spring": "^9.7.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
